--- a/deploy/olm-catalog/dev/7.10.0-1/manifests/businessautomation-operator.7.10.0-1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.10.0-1/manifests/businessautomation-operator.7.10.0-1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.10.0
-    createdAt: "2021-01-06 16:50:30"
+    createdAt: "2021-02-10 11:55:03"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.0-1-dev-6vggmqspm6
+  name: businessautomation-operator.7.10.0-1-dev-q8hh8jwtrb
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -437,7 +437,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.0-1-dev-6vggmqspm6
+    operated-by: businessautomation-operator.7.10.0-1-dev-q8hh8jwtrb
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -453,5 +453,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.0-1-dev-6vggmqspm6
-  version: 7.10.0-1+6vggmqspm6
+      operated-by: businessautomation-operator.7.10.0-1-dev-q8hh8jwtrb
+  version: 7.10.0-1+q8hh8jwtrb
