[RHPAM-3494] - Make pulling of dependencies and kjar validation skippable in kie-server lauch script
Signed-off-by: spolti <fspolti@redhat.com>

Update pkg/controller/kieapp/defaults/defaults_test.go

Co-authored-by: Jakub Schwan <jschwan@redhat.com>

--- a/config/7.10.1/common.yaml
+++ b/config/7.10.1/common.yaml
@@ -690,6 +690,10 @@ servers:
                       value: "[[.KieName]]-ping"
                     - name: OPENSHIFT_DNS_PING_SERVICE_PORT
                       value: "8888"
+                    - name: KIE_SERVER_DISABLE_KC_PULL_DEPS
+                      value: "[[.Build.DisablePullDeps]]"
+                    - name: KIE_SERVER_DISABLE_KC_VERIFICATION
+                      value: "[[.Build.DisableKCVerification]]"
                     # Auth config BEGIN
                     ## SSO config BEGIN
                     #[[if $.Auth.SSO.URL]]
