[RHPAM-3494] - Make pulling of dependencies and kjar validation skippable in kie-server lauch script
Cherry-pick of https://github.com/kiegroup/kie-cloud-operator/pull/612
Apply the changes on config/7.11.0/common.yaml

Signed-off-by: spolti <fspolti@redhat.com>

--- a/config/7.11.0/common.yaml
+++ b/config/7.11.0/common.yaml
@@ -676,6 +676,10 @@ servers:
                           fieldPath: metadata.namespace
                     - name: KUBERNETES_LABELS
                       value: "cluster=jgrp.k8s.[[.KieName]]"
+                    - name: KIE_SERVER_DISABLE_KC_PULL_DEPS
+                      value: "[[.Build.DisablePullDeps]]"
+                    - name: KIE_SERVER_DISABLE_KC_VERIFICATION
+                      value: "[[.Build.DisableKCVerification]]"
                     # Auth config BEGIN
                     ## SSO config BEGIN
                     #[[if $.Auth.SSO.URL]]
