--- a/deploy/olm-catalog/test/7.11.0-1/manifests/businessautomation-operator.7.11.0-1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.11.0-1/manifests/businessautomation-operator.7.11.0-1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.11.0
-    createdAt: "2021-03-08 10:19:42"
+    createdAt: "2021-03-08 18:26:05"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.11.0-1-dev-sj2vmfpvgc
+  name: businessautomation-operator.7.11.0-1-dev-vp6bcxndsb
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -413,7 +413,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.11.0-1-dev-sj2vmfpvgc
+    operated-by: businessautomation-operator.7.11.0-1-dev-vp6bcxndsb
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -429,5 +429,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.11.0-1-dev-sj2vmfpvgc
-  version: 7.11.0-1+sj2vmfpvgc
+      operated-by: businessautomation-operator.7.11.0-1-dev-vp6bcxndsb
+  version: 7.11.0-1+vp6bcxndsb
