--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -522,6 +522,10 @@ spec:
                         description: The image tag to use e.g. 7.9.0, this param is
                           optional for custom image.
                         type: string
+                      jbpmCluster:
+                        description: Enable the clustering between Kieservers and
+                          add one replicas if only one is configured
+                        type: string
                       jvm:
                         description: JvmObject JVM specification to be used by the
                           KieApp
@@ -913,6 +917,10 @@ spec:
                       imageTag:
                         description: The image tag to use e.g. 7.9.0, this param is
                           optional for custom image.
+                        type: string
+                      jbpmCluster:
+                        description: Enable the clustering between Kieservers and
+                          add one replicas if only one is configured
                         type: string
                       jvm:
                         description: JvmObject JVM specification to be used by the
@@ -1683,6 +1691,10 @@ spec:
                           description: The image tag to use e.g. 7.9.0, this param
                             is optional for custom image.
                           type: string
+                        jbpmCluster:
+                          description: Enable the clustering between Kieservers and
+                            add one replicas if only one is configured
+                          type: string
                         jms:
                           description: KieAppJmsObject messaging specification to
                             be used by the KieApp
@@ -2059,6 +2071,10 @@ spec:
                       imageTag:
                         description: The image tag to use e.g. 7.9.0, this param is
                           optional for custom image.
+                        type: string
+                      jbpmCluster:
+                        description: Enable the clustering between Kieservers and
+                          add one replicas if only one is configured
                         type: string
                       keystoreSecret:
                         description: Keystore secret name
@@ -2631,6 +2647,10 @@ spec:
                             description: The image tag to use e.g. 7.9.0, this param
                               is optional for custom image.
                             type: string
+                          jbpmCluster:
+                            description: Enable the clustering between Kieservers
+                              and add one replicas if only one is configured
+                            type: string
                           jvm:
                             description: JvmObject JVM specification to be used by
                               the KieApp
@@ -3029,6 +3049,10 @@ spec:
                           imageTag:
                             description: The image tag to use e.g. 7.9.0, this param
                               is optional for custom image.
+                            type: string
+                          jbpmCluster:
+                            description: Enable the clustering between Kieservers
+                              and add one replicas if only one is configured
                             type: string
                           jvm:
                             description: JvmObject JVM specification to be used by
@@ -3820,6 +3844,10 @@ spec:
                               description: The image tag to use e.g. 7.9.0, this param
                                 is optional for custom image.
                               type: string
+                            jbpmCluster:
+                              description: Enable the clustering between Kieservers
+                                and add one replicas if only one is configured
+                              type: string
                             jms:
                               description: KieAppJmsObject messaging specification
                                 to be used by the KieApp
@@ -4208,6 +4236,10 @@ spec:
                           imageTag:
                             description: The image tag to use e.g. 7.9.0, this param
                               is optional for custom image.
+                            type: string
+                          jbpmCluster:
+                            description: Enable the clustering between Kieservers
+                              and add one replicas if only one is configured
                             type: string
                           keystoreSecret:
                             description: Keystore secret name
